<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/logo"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <TextView
            android:id="@+id/app_name_diamond"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_toRightOf="@+id/logo"
            android:layout_centerVertical="true"
            android:textSize="32sp"
            android:fontFamily="@font/mts_sans_bold"
            android:gravity="center"
            android:textColor="@color/dark_red"
            android:text="@string/app_name_diamond"/>
        <TextView
            android:id="@+id/app_name_eye"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_toRightOf="@+id/app_name_diamond"
            android:layout_centerVertical="true"
            android:textSize="32sp"
            android:fontFamily="@font/mts_sans_bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/app_name_eye"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="48dp"
            android:layout_height="52dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:onClick="switchMainLayoutDrawer">

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/dark_red"
                app:layout_constraintBottom_toTopOf="@id/line2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/dark_red"
                app:layout_constraintTop_toBottomOf="@id/line1"
                app:layout_constraintBottom_toTopOf="@id/line3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/dark_red"
                app:layout_constraintTop_toBottomOf="@id/line2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/main_layout_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/dark_red" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollY="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:scrollY="0dp"
                    >

                    <TextView
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:fontFamily="@font/mts_sans_bold"
                        android:textSize="35sp"
                        android:textColor="@color/black"
                        android:text="@string/our_service"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:fontFamily="@font/mts_sans_bold"
                        android:textSize="35sp"
                        android:textColor="@color/dark_red"
                        android:text="@string/watch_movies"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:fontFamily="arial"
                        android:textSize="25sp"
                        android:textColor="@color/black"
                        android:text="@string/agitate"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/dark_red"
                        android:textSize="32sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/mts_sans_medium"
                        android:text="@string/start_now"
                        android:onClick="goToVideoManager"/>

                    <!--<VideoView
                        android:id="@+id/example_video_view"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginTop="30dp"
                        />-->

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="-64dp"
            android:layout_gravity="left"
            android:background="@color/white">

            <TextView
                android:id="@+id/how_it_works_text"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="@font/mts_sans_bold"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:text="@string/how_it_works"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/how_it_works_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAlignment="center"
                android:gravity="top"
                android:fontFamily="@font/mts_sans_bold"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:text="@string/developers"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>